layout and readability fixes

--- a/visualise/datasetsSankey.css
+++ b/visualise/datasetsSankey.css
@@ -19,7 +19,7 @@ body {
 
 .node text {
   pointer-events: none;
-  text-shadow: 0 1px 0 #fff;
+  /*text-shadow: 0 1px 0 #fff;*/
 }
 
 .link {
@@ -91,4 +91,12 @@ body {
 .sidebar-heading {
   font-size: .75rem;
   text-transform: uppercase;
+}
+
+.ds-description {
+  margin: 10px;
+}
+
+#graph-heading {
+  padding-top: 20px;
 }
